[workspace]
default-members = ["gpu-pruner"]
resolver = "1"
members = [
    "resources",
    "gpu-pruner",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace.package]
version= "0.1.0"
readme = "README.md"
edition = "2021"
rust-version = "1.79.0"


[workspace.dependencies]


kube = { version = "0.92", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.22", features = ["latest"] }

tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "json"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
anyhow = "1.0.81"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
thiserror = "1"
serde_yaml = "0.9.34"
camino = "1.1.6"
ldap3 = { version = "0.11.3" }
once_cell = "1.19.0"
