[workspace]
default-members = ["gpu-pruner"]
resolver = "2"
members = [
    "resources",
    "gpu-pruner",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace.package]
version = "0.4.0"
readme = "README.md"
edition = "2024"
rust-version = "1.88"


[workspace.dependencies]


kube = { version = "3", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.27", features = ["latest", "schemars"] }

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
thiserror = "2"
jiff = "0.2"
camino = "1"
ldap3 = "0.12"
