[package]
name = "gpu-pruner"
version = "0.2.2"
edition = "2021"

[dependencies]

resources = { path = "../resources" }

kube.workspace = true
k8s-openapi.workspace = true

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

anyhow = "1.0.86"
prometheus-http-query = "0.8.3"
reqwest = "0.12.4"

clap = { version = "4.5.4", features = ["derive"] }
minijinja = "2.0.3"

secrecy = "0.8.0"
uuid = {version = "1", features = ["v7", "v4"]}
serde_yaml = "*"
is-terminal = "0.4.13"
thiserror.workspace = true
futures.workspace = true
chrono.workspace = true

# OTEL 
opentelemetry = { version = "0.26", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.26", features = ["trace", "rt-tokio", "metrics", "logs_level_enabled"] }
opentelemetry-appender-tracing = {version = "0.26.0" }
opentelemetry-semantic-conventions = {version = "0.26.0" }
opentelemetry-otlp = {version = "0.26.0", features = ["tonic", "metrics"]}
tracing-opentelemetry = "0.27.0"

once_cell = "1.19.0"