[package]
name = "gpu-pruner"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gpu-pruner"
path = "src/main.rs"

[[bin]]
name = "querytest"
path = "src/bin/querytest.rs"


[features]
default = []
otel = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-appender-tracing", "opentelemetry-semantic-conventions", "opentelemetry-otlp", "tracing-opentelemetry"]

[dependencies]

resources = { path = "../resources" }

kube.workspace = true
k8s-openapi.workspace = true

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

anyhow.workspace = true
prometheus-http-query = "0.8"
reqwest = { version = "0.12", features = ["native-tls"] }

clap = { version = "4", features = ["derive"] }
minijinja = "2"

secrecy = "0.10"
uuid = { version = "1", features = ["v7", "v4"] }
is-terminal = "0.4"
thiserror.workspace = true
futures.workspace = true
chrono.workspace = true
jiff.workspace = true

# OTEL
opentelemetry = { version = "0.31", features = ["trace", "metrics"], optional = true }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio", "metrics"], optional = true }
opentelemetry-appender-tracing = { version = "0.31", optional = true }
opentelemetry-semantic-conventions = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics"], optional = true }
tracing-opentelemetry = { version = "0.32", features = ["metrics"], optional = true }

prettytable = "0.10"
csv = "1"
bitflags = "2"
